--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
 
 }
