--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.SearchActivity"></activity>
+        <activity android:name=".ui.profile.ProfileSettingsActivity"></activity>
+        <activity android:name=".ui.SearchActivity" />
         <activity android:name=".ui.NewsActivity" />
-        <activity android:name=".ui.ProfileActivity" />
+        <activity android:name=".ui.profile.ProfileActivity" />
         <activity android:name=".ui.ShareActivity" />
         <activity android:name=".ui.HomeActivity">
             <intent-filter>
