--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
     implementation 'com.github.ittianyu:BottomNavigationViewEx:2.0.4'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
 }
